backend/deployments/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: db-backup
  labels:
    name: db-backup
    app: db-backup
